--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -97,5 +97,12 @@
         "pending":"Pending",
         "approved":"Approved",
         "view":"View"
+    },
+
+    "cart":{
+        "product":"Product",
+        "price":"Price",
+        "quantity":"Quantity",
+        "subtotal":"Subtotal"
     }
 }
