--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -42,8 +42,10 @@
 
 
         "orange":"البرتقالي", 
-        "olive_il":"زيت الزيتون", 
+        "olive_oil":"زيت الزيتون", 
         "pomegranate":"رمان", 
+        "tomato":"طماطم", 
+        
 
 
         "meat":"لحم", 
@@ -53,7 +55,9 @@
         "bread":"خبز",
         "jam":"مربى",
         "frozen_food":"أغذية مجمدة",
-        "fruits":"الفاكهة"
+        "fruits":"الفاكهة",
+        "grocery":"بقالة"
+
     },
 
 
