--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -44,8 +44,9 @@
 
 
         "orange":"Orange", 
-        "olive_il":"Olive Oil", 
+        "olive_oil":"Olive Oil", 
         "pomegranate":"Pomegranate", 
+        "tomato":"Tomato", 
 
 
 
@@ -56,7 +57,8 @@
         "bread":"Bread",
         "jam":"Jam",
         "frozen_food":"Frozen Food",
-        "fruits":"Fruits"
+        "fruits":"Fruits",
+        "grocery":"Grocery"
     },
 
     "auth":{
