--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -104,6 +104,12 @@
         "product":"المنتج",
         "price":"السعر",
         "quantity":"كمية",
-        "subtotal":"المجموع الفرعي"
+        "subtotal":"المجموع الفرعي",
+        "total":"مجموع",
+        "shiping":"شحن",
+        "update":"تحديث السلة",
+        "proceed":"باشرالخروج من الفندق"
+
+
     }
 }
