--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -39,6 +39,7 @@
         "glasses":"نظارات",
         "shoes":"أحذية",
         "watches":"ساعات",
+        "category":"الفئة",
 
 
         "orange":"البرتقالي", 
@@ -108,7 +109,10 @@
         "total":"مجموع",
         "shiping":"شحن",
         "update":"تحديث السلة",
-        "proceed":"باشرالخروج من الفندق"
+        "proceed":"باشرالخروج من الفندق",
+        "add_to_cart":"أضف إلى السلة",
+
+        "dummy_text":"تم وسفن إنطلاق ويكيبيديا أن, يقوم والقرى للإتحاد مما ثم. هو أخذ لكون السفن, ان عدد تسبب الدول اليها. بـ واستمر البرية مما, دنو و مشروط رجوعهم الأهداف. أمّا وحرمان الثقيلة بحق عن, العصبة محاولات أن بين. بـ عرفها اعلان العصبة ذات, كل شموليةً العالمية إيو."
 
 
     }
