--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -30,7 +30,8 @@
         "top_trending":"Top Trending",
         "top_trending_items":"Top Trending Items",
         "feature_products":"Feature Products",
-        "feature_items":"Feature Items"
+        "feature_items":"Feature Items",
+        "popular_categories":"Popular Categories"
 
 
     },
