--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -115,6 +115,8 @@
         "update":"تحديث السلة",
         "proceed":"باشرالخروج من الفندق",
         "add_to_cart":"أضف إلى السلة",
+        "add_to":"أضف إلى",
+        "favourite":"المفضلة",
 
         "dummy_text":"تم وسفن إنطلاق ويكيبيديا أن, يقوم والقرى للإتحاد مما ثم. هو أخذ لكون السفن, ان عدد تسبب الدول اليها. بـ واستمر البرية مما, دنو و مشروط رجوعهم الأهداف. أمّا وحرمان الثقيلة بحق عن, العصبة محاولات أن بين. بـ عرفها اعلان العصبة ذات, كل شموليةً العالمية إيو."
 
