--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -57,6 +57,8 @@
         "oil":"نفط",
         "bread":"خبز",
         "jam":"مربى",
+        "honey":"عسل",
+        "sugar":"السكر",
         "frozen_food":"أغذية مجمدة",
         "fruits":"الفاكهة",
         "grocery":"بقالة"
