--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -59,6 +59,8 @@
         "oil":"Oil",
         "bread":"Bread",
         "jam":"Jam",
+        "honey":"Honey",
+        "sugar":"Sugar",
         "frozen_food":"Frozen Food",
         "fruits":"Fruits",
         "grocery":"Grocery"
