--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -123,5 +123,12 @@
         "dummy_text":"تم وسفن إنطلاق ويكيبيديا أن, يقوم والقرى للإتحاد مما ثم. هو أخذ لكون السفن, ان عدد تسبب الدول اليها. بـ واستمر البرية مما, دنو و مشروط رجوعهم الأهداف. أمّا وحرمان الثقيلة بحق عن, العصبة محاولات أن بين. بـ عرفها اعلان العصبة ذات, كل شموليةً العالمية إيو."
 
 
+    },
+
+    "search":{
+        "filters":"مرشحات",
+        "categories":"التصنيفات",
+        "apply":"تطبيق",
+        "price":"السعر"
     }
 }
