--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -120,5 +120,12 @@
         "add_to":"Add to",
         "favourite":"Favourite",
         "dummy_text":"Lorem ipsum dolor sit amet, his no adipisci pericula conclusionemque. Qui labore salutandi ex, vivendum argumentum mediocritatem vis eu, viris tritani per id. At iudicabit maluisset vis, dicant diceret pri cu. Cum at rebum vulputate forensibus, eruditi principes ad vel, pro denique recusabo at. Ubique nominavi delicata sit cu, quo no reque insolens suscipiantur."
+    },
+
+    "search":{
+        "filters":"Filters",
+        "categories":"Categories",
+        "apply":"Apply",
+        "price":"Price"
     }
 }
