--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -33,9 +33,9 @@
         "feature_items":"Feature Items",
         "popular_categories":"Popular Categories",
 
-        "icecream":"Ice Cream",
+        "icecream":"Meat",
         "fast_food":"Backery",
-        "dry_fruits":"Dry Fruits"
+        "dry_fruits":"Fish"
 
     },
     "category":{
