--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -33,9 +33,9 @@
         "popular_categories":"الفئات الشعبية",
 
 
-        "icecream":"بوظة",
+        "icecream":"لحم",
         "fast_food":"مخبز",
-        "dry_fruits":"فواكه مجففة"
+        "dry_fruits":"لحم السمك"
 
     },
     "category":{
