--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -122,6 +122,8 @@
         "update":"تحديث السلة",
         "proceed":"باشرالخروج من الفندق",
         "add_to_cart":"أضف إلى السلة",
+        "apply":"تطبيق",
+        "code":"الشفرة",
         "add_to":"أضف إلى",
         "favourite":"المفضلة",
 
