--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -136,6 +136,18 @@
         "filters":"مرشحات",
         "categories":"التصنيفات",
         "apply":"تطبيق",
-        "price":"السعر"
+        "price":"السعر",
+        "filter":"منقي",
+        "reset":"إعادة تعيين",
+        "brand":"العلامة التجارية",
+        "sort_by_name":"الترتيب حسب الاسم:",
+        "sort_by_price":"فرز حسب السعر:",
+        
+        "ascending":"تصاعدي",
+        "descending":"تنازلي",
+        "high_to_low":"من الأعلى إلى الأدنى",
+        "low_to_high":"من أسفل إلى أعلى"
+
+
     }
 }
